# sentry-android

./: .appveyor.yml  .craft.yml  .editorconfig  .gitignore  .travis.yml  CONTRIBUTING.md  MIGRATION.md  Makefile  README.md  build.gradle.kts  gradle.properties  publish.gradle.kts  sentry.properties  settings.gradle.kts
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: android.yml  emulator-sample-install.yml  windows.yml
buildSrc/: build.gradle.kts
buildSrc/src/main/java/: Config.kt
gradle/: gradle-mvn-push.gradle
scripts/: bump-version.sh  zeus.sh
sentry-android/: build.gradle.kts
sentry-android-core/: INSTALLATION  build.gradle.kts  multidex-config.pro  proguard-rules.pro
sentry-android-core/src/main/: AndroidManifest.xml
sentry-android-core/src/test/resources/: event.json  event_with_contexts.json
sentry-android-ndk/: CMakeLists.txt  build.gradle.kts  multidex-config.pro  proguard-rules.pro  sentry-native
sentry-android-ndk/src/main/: AndroidManifest.xml
sentry-android-ndk/src/main/java/io/sentry/android/ndk/: SentryNdk.java
sentry-android-ndk/src/main/jni/: sentry.c
sentry-android-ndk/src/test/java/io/sentry/android/ndk/: SentryNdkUtilTest.kt
sentry-android-timber/: build.gradle.kts
sentry-android/src/test/resources/: robolectric.properties
sentry-console-sample/: build.gradle.kts
sentry-core/: build.gradle.kts
sentry-core/src/main/java/io/sentry/: DateUtils.java  Hub.java  (+14 more)
sentry-core/src/test/resources/: sentry.properties  single-event-envelope.txt
sentry-logback/: build.gradle.kts
sentry-logback/src/test/resources/: logback.xml
sentry-native-sample/: build.gradle.kts  proguard-rules.pro
sentry-okhttp3/: build.gradle.kts
sentry-sample/: CMakeLists.txt  build.gradle  build.gradle.kts
sentry-sample/src/androidTest/java/io/sentry/sample/: ExampleInstrumentedTest.java  MainActivityTest.kt  SentryService.kt
sentry-sample/src/main/: AndroidManifest.xml
sentry-sample/src/main/cpp/: native-sample.cpp
sentry-sample/src/main/java/io/sentry/core/transport/: StdoutTransport.java
sentry-sample/src/main/java/io/sentry/sample/: MainActivity.java  MyApplication.java  MyFragment.java  NativeSample.java
sentry-sample/src/main/res/layout/: activity_main.xml  my_fragment.xml
sentry-sample/src/main/res/xml/: network_security_config.xml
sentry-sample/src/test/java/io/sentry/sample/: ExampleUnitTest.java
sentry-samples/sentry-samples-android/: build.gradle.kts
sentry-samples/sentry-samples-android/src/main/: AndroidManifest.xml
sentry-samples/sentry-samples-console/: build.gradle.kts
sentry-samples/sentry-samples-log4j2/src/main/resources/: log4j2.xml
sentry-samples/sentry-samples-logback/: build.gradle.kts
sentry-samples/sentry-samples-spring/: build.gradle.kts
sentry-samples/sentry-samples-spring-boot/: build.gradle.kts
sentry-spring/: build.gradle.kts
sentry-spring-boot-starter/: build.gradle.kts
(+406 files in other folders)
